tests/fail/pass_no_receiver.stderr
error[E0436]: 'pass' used without a receiver; prefix the expression with 'auto x =' or 'alias y ='
 --> tests/fail/pass_no_receiver.tk:18:16
   |
 18 |         1 => { pass 42 } // Error: pass used without a receiver (no 'pass match')
   |                ^
error[E0553]: Match is not exhaustive. Missing: non-enum types require a wildcard branch ('_')
 --> tests/fail/pass_no_receiver.tk:17:5
   |
 17 |     match 1 {
   |     ^
